...
            "state": "translated",
            "value": "Tilføj indexer"
          }
        }
      }
    },
    "Add movie": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Tilføj film"
          }
...
            "state": "translated",
            "value": "Adfærd"
          }
        }
      }
    },
    "Blocklist": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Blokeringsliste"
          }
...
            "state": "translated",
            "value": "Bog"
          }
        }
      }
    },
    "Books": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Bøger"
          }
...
            "state": "translated",
            "value": "Kalenderabonnement"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Annullér"
          }
...
            "state": "translated",
            "value": "Downloadet, venter på at blive importeret."
          }
        }
      }
    },
    "Downloading": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Downloader"
          }
...
            "state": "translated",
            "value": "Skjul hentede"
          }
        }
      }
    },
    "History": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Historik"
          }
...
            "state": "translated",
            "value": "Sprog"
          }
        }
      }
    },
    "Language profiles": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Sprogprofiler"
          }
...
            "state": "translated",
            "value": "Niveau"
          }
        }
      }
    },
    "Library": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Bibliotek"
          }
...
            "state": "translated",
            "value": "Film"
          }
        }
      }
    },
    "Movies": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Film"
          }
...
            "state": "translated",
            "value": "Pilotafsnit"
          }
        }
      }
    },
    "Plays": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Afspilninger"
          }
...
            "state": "translated",
            "value": "Forespørgsler"
          }
        }
      }
    },
    "Queue": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Kø"
          }
...
            "state": "translated",
            "value": "Søg efter en bog i Readarr for at tilføje den."
          }
        }
      }
    },
    "Search all": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Søg alle"
          }
...
            "state": "translated",
            "value": "Søg efter film…"
          }
        }
      }
    },
    "Search now": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Søg nu"
          }
...
            "state": "translated",
            "value": "Vælg %@"
          }
        }
      }
    },
    "Select all shown": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Vælg alle viste"
          }
...
            "state": "translated",
            "value": "Opsæt Radarr, Sonarr eller Prowlarr under Administrér → Forbindelser."
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Indstillinger"
          }
...
            "state": "translated",
            "value": "Viser %lld af %lld"
          }
        }
      }
    },
    "Shows": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Serier"
          }
...
            "state": "translated",
            "value": "Forhindr importlister i at tilføje dem igen"
          }
        }
      }
    },
    "Storage": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Lagerplads"
          }
...
            "state": "translated",
            "value": "Skal læses"
          }
        }
      }
    },
    "Today": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "I dag"
          }
...
            "state": "translated",
            "value": "Set"
          }
        }
      }
    },
    "Watching": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Afspilning"
          }
...
            "state": "translated",
            "value": "færdig"
          }
        }
      }
    },
    "configured": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "konfigureret"
          }
...
